MDEV-34922 Assertion `value.length() == FbtImpl::binary_length()' failed in Type_handler_fbt<FbtImpl, TypeCollectionImpl>::Field_fbt::store_native, Assertion `item->null_value' failed in Type_handler::Item_send_str

This patch is a workaround to avoid crashes on DBUG_ASSERT.
The core problem is reported in:

MDEV-35238 Wrong results from a MyISAM/HEAP/ARIA tables with a single record and an aggregate

which is not trivial to fix.

The code relevant to MDEV-35238 erroneously reads a value of Item_copy_xxx when
there is no a value.
This patch initializes Item_copy_fbt to keep a zero value by default
instead of "no value".

This makes the reported statemenents return a zero UUID instead of the crash.
When MDEV-35238 is fixed, they should return a non-zero generated UUID.